--- a/RADIO/app/build.gradle
+++ b/RADIO/app/build.gradle
@@ -30,8 +30,11 @@ dependencies {
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.android.support:cardview-v7:26.+'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'jp.wasabeef:picasso-transformations:2.1.2'
     testCompile 'junit:junit:4.12'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.8'
+    compile 'com.makeramen:roundedimageview:2.3.0'
 }
 repositories {
     mavenCentral()
