--- a/RADIO/app/src/main/AndroidManifest.xml
+++ b/RADIO/app/src/main/AndroidManifest.xml
@@ -11,15 +11,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".KMainActivity">
+        android:theme="@android:style/Theme.NoTitleBar">
+        <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".KMainActivityl">
+        </activity>
         <activity android:name=".PlayAudioExample"></activity>
+        <activity android:name=".APIRadio"></activity>
+        <activity android:name=".Parametre"></activity>
     </application>
 
 </manifest>
