--- a/RADIO/app/build.gradle
+++ b/RADIO/app/build.gradle
@@ -25,16 +25,18 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.android.support:cardview-v7:26.+'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'jp.wasabeef:picasso-transformations:2.1.2'
-    testCompile 'junit:junit:4.12'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.8'
     compile 'com.makeramen:roundedimageview:2.3.0'
+    compile 'com.android.support:design:26.+'
+    testCompile 'junit:junit:4.12'
+    compile 'com.google.android.gms:play-services-maps:11.0.4'
 }
 repositories {
     mavenCentral()
