--- a/RADIO/app/src/main/AndroidManifest.xml
+++ b/RADIO/app/src/main/AndroidManifest.xml
@@ -2,16 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="face06.radio">
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
-<uses-permission android:name="android.permission.INTERNET"></uses-permission>
-   <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyDJ7fgzBbqXkUr8Um7y7VIlGUgMEN7KIfs"/>
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.DayNight">
+        android:theme="@style/Theme.AppCompat.NoActionBar">
         <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,9 +25,9 @@
         </activity>
         <activity android:name=".KMainActivityl">
         </activity>
-        <activity android:name=".PlayAudioExample"></activity>
-        <activity android:name=".APIRadio"></activity>
-        <activity android:name=".Parametre"></activity>
+        <activity android:name=".PlayAudioExample" />
+        <activity android:name=".Parametre" />
+        <activity android:name=".APropos" />
     </application>
 
 </manifest>
